# DeGarden-Firmware-Moisture

./: .env.example  README.md  build.rs
.cargo/: config.toml
esp32c6/: Cargo.toml  build.rs
esp32c6/src/board/: sensor.rs  timer.rs
esp32c6/src/comms/: wifi.rs
esp32c6/src/power/: sleep.rs
esp32c6/src/util/: message.rs
src/: main.rs
src/board/: io.rs  mod.rs  sensor.rs  timer.rs
src/comms/: mod.rs  network.rs  wifi.rs
src/power/: sleep.rs
src/util/: message.rs
