[package]
name = "firmware"
version = "0.2.0"
authors= ["Aleksandar Grahovac <aleksandar.g1999@gmail.com>"]
edition = "2021"
license = "Proprietary"

[[bin]]
name = "firmware"
path = "src/main.rs"
test = false
doctest = false
bench = false

[profile.release]
# Maximum optimization (faster, smaller binary, slower compile time)
opt-level = 3

[build-dependencies]
dotenvy = "0.15"

[dependencies]
# Hardware
esp-hal = { version = "0.20.1", features = ["esp32c6"] }
esp-backtrace = { version = "0.14.0", features = [
    "esp32c6",
    "panic-handler",
    "exception-handler",
    "println",
] }
critical-section = "1.2.0"
portable-atomic = { version = "1.7.0", features = ["unsafe-assume-single-core"] }

# Utils
heapless = { version = "0.8.0", default-features = false }
itoa = { version = "1.0", default-features = false }

# Log
embedded-io = "0.6.1"
esp-println = { version = "0.11.0", features = ["esp32c6"] }

# Network
esp-wifi = { version = "0.8.0", features = [
    "esp32c6",
    "wifi-default",
    "utils",
    "phy-enable-usb",
] }
smoltcp = { version = "0.11.0", default-features = false, features = [
    "proto-igmp",
    "proto-ipv4",
    "socket-tcp",
    "socket-icmp",
    "socket-udp",
    "medium-ethernet",
    "proto-dhcpv4",
    "socket-raw",
    "socket-dhcpv4",
] }
